--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link rel="stylesheet" href="./chatbot-ui.css">
     <!-- Bootstrap styles -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -49,6 +49,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="chat-container"></div>
+    <script src="./chatbot-ui.js"></script>
+    <script>
+        createChatBot(host = 'http://3.109.95.156:5005/webhooks/rest/webhook', botLogo = "./imgs/bot-logo.png",
+            title = "CU-SEVAK", welcomeMessage = "Hey, i am cu-sevak", inactiveMsg = "Server is down, Please wait or refresh the page", theme = "blue")
+    </script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
