--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,8 @@
     <script src="./chatbot-ui.js"></script>
     <script>
         createChatBot(host = 'http://3.109.95.156:5005/webhooks/rest/webhook', botLogo = "./imgs/bot-logo.png",
-            title = "CU-SEVAK", welcomeMessage = "Hey, i am cu-sevak", inactiveMsg = "Server is down, Please wait or refresh the page", theme = "blue")
-    </script>
+            title = "CU-SEVAK", welcomeMessage = "Hey, i am cu-sevak. How can i help ?", inactiveMsg = "Server is down, Please wait or refresh the page", theme = "blue")
+    </script> 
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
